create event api
