# routes/web.php
@@ -26,7 +26,7 @@ $router->post('register-user', 'AuthenticationController@postRegisterUser');
 Route::post('/user-notification','UserController@sendUserNotification');
 //Route::post('/create-list','ListController@CreateUserContactList');
 Route::get('/get-contact-list','ListController@getUserContactList');
-
+Route::post('/create-event','EventController@CreateEvent');
 // route for creating access_token
 $router->post('login', 'AccessTokenController@createAccessToken');
 
