# storage/api-docs/api-docs.json
@@ -13,7 +13,7 @@
         },
         "version": "1.0.0"
     },
-    "host": "invited.shayansolutions.com",
+    "host": "localhost:8000",
     "basePath": "/",
     "schemes": [
         "http",
@@ -174,6 +174,67 @@
                         "type": "integer",
                         "format": "int64"
                     }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Contact List Created Successfully"
+                    },
+                    "422": {
+                        "description": "Unable to create list"
+                    }
+                }
+            }
+        },
+        "/create-event": {
+            "post": {
+                "summary": "Create Event",
+                "description": "",
+                "operationId": "addEvent",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "user_id",
+                        "in": "query",
+                        "description": "User id",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "name": "event_time",
+                        "in": "query",
+                        "description": "event_time",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "payment_method",
+                        "in": "query",
+                        "description": "Payment Method",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "name": "longitude",
+                        "in": "query",
+                        "description": "longitude",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "latitude",
+                        "in": "query",
+                        "description": "latitude",
+                        "required": true,
+                        "type": "string"
+                    }
+
                 ],
                 "responses": {
                     "200": {
